<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        >

        <TextView
            android:id="@+id/Create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/create"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/account"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_name"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape"
            android:hint="@string/username_or_email"
            android:textColorHint="@color/black"
            android:paddingStart="20sp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:paddingStart="20sp"
            android:password="true"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            android:paddingStart="20sp"
            android:password="true"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
<LinearLayout
    android:id="@+id/sign_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@id/Registration_form"
    android:gravity="center"
    android:layout_marginTop="20dp"
    >
    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in" />

    <ImageButton
        android:id="@+id/signBtn"
        android:layout_width="74dp"
        android:layout_height="65dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:src="@drawable/next_button" />
</LinearLayout>
    <TextView
        android:id="@+id/textSignup"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_layout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="142dp"
        android:gravity="center"
        android:text="@string/sign_in_with"
        android:textAlignment="center" />
    <LinearLayout
        android:id="@+id/socials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/textSignup"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:layout_marginEnd="20dp"
            android:background="@null"
            />
        <ImageButton
            android:id="@+id/apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apple_id"
            android:layout_marginEnd="20dp"
            android:background="@null"
            />
        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:layout_marginEnd="20dp"
            android:background="@null"
            />
    </LinearLayout>

</RelativeLayout>