<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="29dp"
    android:layout_marginEnd="20dp"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/welcomeTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_bold"
            />
        <TextView
            android:id="@+id/backTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backk"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_bold"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sign_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Welcome"
        android:paddingTop="20dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/usernametxt"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="@drawable/shape"
            android:hint="@string/username_or_email"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            />
        <EditText
            android:id="@+id/passwordtxt"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:background="@drawable/shape"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:password="true"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_form"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/registerCTA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />

        <ImageButton
            android:id="@+id/login"
            android:layout_width="80dp"
            android:layout_height="84dp"
            android:layout_marginStart="180dp"
            android:src="@drawable/next_button"
           android:background="@null"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textSignin"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSign"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="142dp"
        android:gravity="center"
        android:text="@string/sign_in_with"
        android:textAlignment="center" />
    <LinearLayout
        android:id="@+id/socialSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/textSignin"
        >
        <ImageButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:layout_marginEnd="20dp"
            android:background="@null"
            />
        <ImageButton
            android:id="@+id/apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/apple_id"
            android:layout_marginEnd="20dp"
            android:background="@null"
            />
        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook"
            android:layout_marginEnd="20dp"
            android:background="@null"
            />
    </LinearLayout>


</RelativeLayout>